fixing issues + hover feature
needed to indent the bullets to make it look cleaner but realized there was some overlapping css

made new css selectors to control the bullets specifically so it didn't move the education and skills lines

added same hover feature to skills and education section so its all the same now

--- a/style.css
+++ b/style.css
@@ -125,6 +125,8 @@ ul {
 ul li {
   margin-bottom: .15rem;
   color: #e5e5e5;
+  margin-bottom: .3rem;
+  line-height: 1.6;
 }
 
 /* cards */
@@ -135,7 +137,7 @@ ul li {
   border-radius: .1rem;
   padding: 2rem;
   margin-bottom: 1rem;
-  transition: border-color 0.2 ease;
+  transition: border-color 0.5 ease;
 }
 
 .card:hover {
@@ -153,6 +155,12 @@ ul li {
   list-style: none;
 }
 
+.list li:hover,
+.skills-list li:hover {
+  border-color: #facc15;
+  transition: border-color 0.5s ease;
+}
+
 .skills-list strong {
   color: #facc15;
 }
@@ -164,6 +172,16 @@ footer {
   font-size: 1rem;
   color: #a3a3a3;
   border-top: 1px solid #2e2e2e;
+}
+
+.card ul {
+  margin-left: 1.5rem;
+  padding-left: 1rem;
+}
+
+.card ul li {
+  margin-bottom: .3rem;
+  line-height: 1.6;
 }
 
 /* mobile time yay */
